Removed logging to avoid the limitation of App Inventor not including the language properties files in the final apk